# agentmodelctl

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/agentmodelctl/: __init__.py  anomaly.py  cache.py  change_detector.py  ci_cmd.py  cli.py  compare_cmd.py  eval_cmd.py  formatter.py  generator.py  init_cmd.py  logs.py  models.py  parser.py  report_cmd.py  reporter.py  router.py  runner.py  scorer.py  security.py  status_cmd.py  switch.py  switch_cmd.py  track.py  validate_cmd.py
src/agentmodelctl/providers/: __init__.py  adapter.py
src/agentmodelctl/templates/: agentmodelctl.yaml  env.example  github_actions.yaml  gitignore  models.yaml
src/agentmodelctl/templates/customer_support/: agent.yaml  eval.yaml
src/agentmodelctl/templates/productivity/: agent.yaml  eval.yaml
src/agentmodelctl/templates/sales/: agent.yaml  eval.yaml
tests/: conftest.py  test_anomaly.py  test_cache.py  test_change_detector.py  test_ci_cmd.py  test_cli.py  test_formatter.py  test_generator.py  test_logs.py  test_models.py  test_parser.py  test_router.py  test_runner.py  test_scorer.py  test_security.py  test_status_cmd.py  test_switch.py  test_switch_enrichment.py  test_track.py
tests/fixtures/: invalid_agent.yaml  sample_evals.yaml  valid_agent.yaml  valid_models.yaml  valid_project.yaml
